[gd_scene load_steps=4 format=3 uid="uid://b1tibxocfw4bw"]

[ext_resource type="Script" uid="uid://dpe5753sl1imm" path="res://Script/end_score.gd" id="1_dn1jk"]
[ext_resource type="Theme" uid="uid://dtl6id04l7wsl" path="res://Theme/new_theme.tres" id="2_52pro"]
[ext_resource type="AudioStream" uid="uid://bwqwuj0x6higi" path="res://sound_music/restart.wav" id="3_dk8li"]

[node name="EndScore" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dn1jk")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -144.0
offset_top = -162.0
offset_right = 144.0
offset_bottom = 162.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.458395, 0.723254, 0, 1)

[node name="Label" type="Label" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -143.0
offset_top = -162.0
offset_right = 144.0
offset_bottom = -76.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_52pro")
text = "Score:"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 1

[node name="Label2" type="Label" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -143.0
offset_top = -69.0
offset_right = 144.0
offset_bottom = 37.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_52pro")
text = "HighScore:"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 1

[node name="Button" type="Button" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -95.0
offset_top = 38.0
offset_right = 95.0
offset_bottom = 107.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_52pro")
text = "Restart"

[node name="Restart" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_dk8li")
bus = &"vfx"

[connection signal="mouse_entered" from="ColorRect/Button" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="ColorRect/Button" to="." method="_on_button_pressed"]
